# FizzBuzzShenanigans

./: .gitignore  CMakeLists.txt  CMakeSettings.json  benchmarks.cpp  main.cpp
FizzBuzzImpl/: Comptime.h  Templated.h
